<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_fourth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/correctSentences"
            style="@style/HeadingTextView"
            android:gravity="center"
            android:text="@string/correctSentences"
            android:textSize="30sp" />

        <TextView
            style="@style/correctSentenceQuestionTextView"
            android:text="@string/SimplePresentTenseEg6" />

        <EditText
            android:id="@+id/answer1"
            style="@style/correctSentenceEditText" />

        <TextView
            style="@style/correctSentenceQuestionTextView"
            android:text="@string/SimplePresentTenseEg7" />

        <EditText
            android:id="@+id/answer2"
            style="@style/correctSentenceEditText" />

        <TextView
            style="@style/correctSentenceQuestionTextView"
            android:text="@string/SimplePresentTenseEg8" />

        <EditText
            android:id="@+id/answer3"
            style="@style/correctSentenceEditText" />

        <TextView
            style="@style/correctSentenceQuestionTextView"
            android:text="@string/SimplePresentTenseEg9" />

        <EditText
            android:id="@+id/answer4"
            style="@style/correctSentenceEditText" />

        <TextView
            style="@style/correctSentenceQuestionTextView"
            android:text="@string/SimplePresentTenseEg10" />

        <EditText
            android:id="@+id/answer5"
            style="@style/correctSentenceEditText" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_next"/>
    </LinearLayout>
</ScrollView>