<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="Formal Greetings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:padding="16dp"
                android:textAppearance="@android:style/TextAppearance.Material.Headline"
                android:typeface="serif"
                android:textColor="@color/colorAccent" />
            <ImageView
                android:id="@+id/speak"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/speak"
                android:gravity="center"
                />
        </LinearLayout>

    <TextView
        android:text="@string/formal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:layout_alignParentStart="true"
        android:padding="12dp"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:typeface="serif" />
    <TextView
        android:text="@string/formal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:padding="12dp"
        android:layout_below="@+id/textView11"
        android:layout_alignParentStart="true"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:typeface="serif" />
    <TextView
        android:text="@string/formal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView13"
        android:padding="12dp"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:typeface="serif" />
    <TextView
        android:text="@string/formal3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/textView14"
        android:layout_marginLeft="30dp"
        android:typeface="serif" />

    <TextView
        android:text="@string/formal4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/textView15"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/textView14"
        android:layout_alignStart="@+id/textView14"
        android:typeface="serif" />

    <TextView
        android:text="@string/formal5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/textView16"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/textView15"
        android:layout_alignStart="@+id/textView15"
        android:typeface="serif" />

        <TextView
            android:text="@string/formal6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView16"
            android:layout_alignParentStart="true"
           android:padding="12dp"
            android:id="@+id/textView17"
            android:typeface="serif"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <TextView
        android:text="@string/formal7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView16"
        android:padding="12dp"
        android:id="@+id/textView32"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:typeface="serif" />

        <TextView
            android:text="@string/formal8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:id="@+id/textView19"

            android:layout_alignEnd="@+id/textView10"
            android:typeface="serif" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:text="@string/formal9"
        android:padding="12dp"
        android:id="@+id/textView21"
            android:typeface="serif" />
        <Button
            android:text="Next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/formal_next_btn"
            style="@style/CustomButtonStyle"
            android:typeface="serif" />

</LinearLayout>
    </ScrollView>

