<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView

            android:id="@+id/ilike"
            style="@style/HeadingTextView"
            android:textSize="32sp"
            android:gravity="center"
            android:text="I like … I don’t like"/>

        <WebView
            android:background="#ffffff"
            android:id="@+id/web_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </WebView>
        <TableRow style="@style/TableRow">
            <TextView
                android:id="@+id/ilike_ex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="Eg:"
                android:textColor="@color/colorAccent"
                android:textSize="25sp"
                android:textStyle="bold" />
            <ImageView
                android:layout_weight="1"
                android:id="@+id/speak"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/speak"
                android:onClick="getVoice"
                android:gravity="right">

            </ImageView>

        </TableRow>

        <TableRow style="@style/TableRow">
            <ImageView style="@style/bullet" />
            <TextView
                android:id="@+id/ilike1"
                style="@style/SimplePresentTenseExamples"
                android:text="@string/like"
                />
        </TableRow>

        <TableRow style="@style/TableRow">
            <ImageView style="@style/bullet" />
            <TextView

                android:id="@+id/ilike2"
                style="@style/SimplePresentTenseExamples"
                android:text="@string/like1"
                android:textStyle="normal|bold" />
        </TableRow>

        <TableRow style="@style/TableRow">
            <ImageView style="@style/bullet" />
            <TextView
                android:id="@+id/ilike3"
                style="@style/SimplePresentTenseExamples"
                android:text="@string/like2"
                />
        </TableRow>

        <TableRow style="@style/TableRow">
            <ImageView style="@style/bullet" />
            <TextView
                android:id="@+id/ilike4"
                style="@style/SimplePresentTenseExamples"
                android:text="@string/like3"
                android:textStyle="normal|bold" />
        </TableRow>

        <TableRow style="@style/TableRow">
            <ImageView style="@style/bullet" />
            <TextView
                android:id="@+id/ilike5"
                style="@style/SimplePresentTenseExamples"
                android:text="@string/like4"
                android:textStyle="normal|bold" />
        </TableRow>

        <TableRow style="@style/TableRow">
            <ImageView style="@style/bullet" />
            <TextView
                android:id="@+id/ilike5"
                style="@style/SimplePresentTenseExamples"
                android:text="@string/like5"
                android:textStyle="normal|italic" />
        </TableRow>

        <TableRow style="@style/TableRow">
            <ImageView style="@style/bullet" />
            <TextView
                android:id="@+id/ilike5"
                style="@style/SimplePresentTenseExamples"
                android:text="@string/like6"
                android:textStyle="normal|italic" />
        </TableRow>

        <TableRow style="@style/TableRow">
            <ImageView style="@style/bullet" />
            <TextView
                android:id="@+id/ilike6"
                style="@style/SimplePresentTenseExamples"
                android:text="@string/like7"
                android:textStyle="normal|italic" />
        </TableRow>

        <TableRow style="@style/TableRow">
            <ImageView style="@style/bullet" />
            <TextView
                android:id="@+id/ilike7"
                style="@style/SimplePresentTenseExamples"
                android:text="@string/like8"
                android:textStyle="normal|italic"/>
        </TableRow>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_next"
            android:layout_gravity="center"
            android:id="@+id/SimplePresentButton"/>
    </LinearLayout>
</ScrollView>