<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView

        android:id="@+id/simplePresent"
        style="@style/HeadingTextView"
        android:textSize="32sp"
        android:gravity="center"
        android:text="The Simple Present Tense"/>

    <WebView
        android:background="#ffffff"
        android:id="@+id/web_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </WebView>
        <TableRow style="@style/TableRow">
    <TextView
        android:id="@+id/spt_ex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="Eg:"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold" />
            <ImageView
                android:layout_weight="1"
                android:id="@+id/speak"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/speak"
                android:onClick="getVoice"
                android:gravity="right">

            </ImageView>

        </TableRow>

    <TableRow style="@style/TableRow">
        <ImageView style="@style/bullet" />
        <TextView
            android:id="@+id/spt1"
            style="@style/SimplePresentTenseExamples"
            android:text="@string/SimplePresentTenseEg1"
            />
    </TableRow>

    <TableRow style="@style/TableRow">
        <ImageView style="@style/bullet" />
        <TextView

            android:id="@+id/spt2"
            style="@style/SimplePresentTenseExamples"
            android:text="@string/SimplePresentTenseEg2"
            />
    </TableRow>

    <TableRow style="@style/TableRow">
        <ImageView style="@style/bullet" />
        <TextView
            android:id="@+id/spt3"
            style="@style/SimplePresentTenseExamples"
            android:text="@string/SimplePresentTenseEg3"
            />
    </TableRow>

    <TableRow style="@style/TableRow">
        <ImageView style="@style/bullet" />
        <TextView
            android:id="@+id/spt4"
            style="@style/SimplePresentTenseExamples"
            android:text="@string/SimplePresentTenseEg4"
            />
    </TableRow>

    <TableRow style="@style/TableRow">
        <ImageView style="@style/bullet" />
        <TextView
            android:id="@+id/spt5"
            style="@style/SimplePresentTenseExamples"
            android:text="@string/SimplePresentTenseEg5"
            />
    </TableRow>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_next"
        android:layout_gravity="center"
        android:id="@+id/SimplePresentButton"/>
</LinearLayout>
</ScrollView>